log
Sat 29 Apr 2023 11:42:02 PM UTC: 
 tests:  0|5
total_score: 0/70
67163a8
Wed 03 May 2023 04:58:43 AM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:7: error: variable ‘auxCol’ set but not used [-Werror=unused-but-set-variable]
   55 |   int auxCol = 0;
      |       ^~~~~~
sudoku.c:54:7: error: variable ‘auxFila’ set but not used [-Werror=unused-but-set-variable]
   54 |   int auxFila = 0;
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a2529ef
Wed 03 May 2023 05:02:49 AM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
ac285dc
Wed 03 May 2023 05:03:52 AM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
26bc85c
Wed 03 May 2023 05:06:24 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a4be696
Wed 03 May 2023 05:07:45 AM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
6436548
Wed 03 May 2023 05:08:25 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
edaa162
Wed 03 May 2023 05:08:37 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
0d697bb
Wed 03 May 2023 05:10:22 AM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
77974e2
Wed 03 May 2023 05:15:39 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ea3a3d1
Wed 03 May 2023 05:16:04 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:70:35: error: ‘auxCol’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   70 |     nodoAd->sudo[auxFila][auxCol] = 1;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
sudoku.c:70:35: error: ‘auxFila’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1: all warnings being treated as errors
Compilation failed
436eccd
Wed 03 May 2023 05:17:27 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:7: error: variable ‘auxCol’ set but not used [-Werror=unused-but-set-variable]
   55 |   int auxCol = 0;
      |       ^~~~~~
sudoku.c:54:7: error: variable ‘auxFila’ set but not used [-Werror=unused-but-set-variable]
   54 |   int auxFila = 0;
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
78550b9
Wed 03 May 2023 05:17:39 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 5/70
c3624c5
Wed 03 May 2023 05:18:10 AM UTC: 
 sudoku.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
 tests:  1|5
total_score: 5/70
27c48e3
Wed 03 May 2023 05:20:07 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
00e6ad5
Wed 03 May 2023 12:48:52 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1834953
Wed 03 May 2023 12:49:04 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e169474
Wed 03 May 2023 02:10:40 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:8: error: variable ‘array’ set but not used [-Werror=unused-but-set-variable]
   47 |   int *array;
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
adc1ef6
Wed 03 May 2023 02:44:38 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:7: error: unused variable ‘verificador’ [-Werror=unused-variable]
   50 |   int verificador = 0;
      |       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
21ae18d
Wed 03 May 2023 03:13:11 PM UTC: 
 sudoku.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
079ffe7
Wed 03 May 2023 03:29:11 PM UTC: 
 sudoku.c | 16 ++++++----------
 1 file changed, 6 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
sudoku.c:48:6: error: ‘array’ is used uninitialized [-Werror=uninitialized]
   48 |   if (array == NULL) exit(EXIT_FAILURE);
      |      ^
cc1: all warnings being treated as errors
Compilation failed
6193064
Wed 03 May 2023 03:29:23 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a587f8d
Wed 03 May 2023 03:29:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6591ac4
